gems updated due to security issue in loofah

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,7 +8,7 @@
 @import "bootstrap";
 // @import "font-awesome-sprockets"; // Commented out to make Bootstrap 4 work
 // @import "font-awesome";
-@import 'font_awesome5';
+@import "font_awesome5";
 
 // Your CSS partials
 @import "layouts/index";
